--- a/src/main/resources/templates/admin/mem_view.html
+++ b/src/main/resources/templates/admin/mem_view.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <section class="container">
-    <table>
+    <table class="table">
         <tr>
             <th>회원 번호</th>
             <td th:text="${view.idx}"></td>
