--- a/src/main/resources/templates/item/cart.html
+++ b/src/main/resources/templates/item/cart.html
@@ -3,7 +3,6 @@
       layout:fragment="Content"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/table.css">
     <title>장바구니</title>
 </head>
 <body>
@@ -11,7 +10,7 @@
     <form action="/item/delivery" method="get">
     <div><h3>장바구니</h3></div>
     <div>
-        <table border="1">
+        <table class="table">
             <tr>
                 <th style="width: 5%;">구분</th>
                 <th style="width: 35%;">상품명</th>
@@ -31,9 +30,9 @@
                 </td>
                 <td th:id="'price'+${cart.idx}" th:text="${#numbers.formatInteger(cart.item_price, '0', 'COMMA')}+'원'">금액</td>
                 <td>
-                    <input type="button" value="-" th:onclick="'count(\'minus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
+                    <input type="button" class="btn btn-outline-secondary btn-sm" value="-" th:onclick="'count(\'minus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
                     <span th:id="'quantity' + ${cart.idx}" th:text="${cart.item_quantity}"></span>
-                    <input type="button" value="+" th:onclick="'count(\'plus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
+                    <input type="button" class="btn btn-outline-secondary btn-sm" value="+" th:onclick="'count(\'plus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
 
                 </td>
                 <td th:id="'totalPrice'+${cart.idx}" class="price" th:text="${#numbers.formatInteger(cart.item_price * cart.item_quantity, 0, 'COMMA')}+'원'"></td>
@@ -45,8 +44,8 @@
             </tr>
         </table>
         <div>
-            <a href="/member/item_list"><button>상품 목록</button></a>
-            <a href="/item/delivery"><button>배송/결제</button></a>
+            <a href="/member/item_list"><button type="button" class="btn btn-outline-secondary btn-sm">상품 목록</button></a>
+            <a href="/item/delivery"><button type="submit" class="btn btn-outline-secondary btn-sm">배송/결제</button></a>
         </div>
     </div>
     </form>
