--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,11 +1,23 @@
-#login{
-    margin: 100px 400px 10px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
 }
-#loginbnt{
-    margin: auto auto 5px;
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
 }
-#item{
-    margin: 10px auto 100px;
+
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
