--- a/src/main/resources/templates/item/delivery.html
+++ b/src/main/resources/templates/item/delivery.html
@@ -10,7 +10,7 @@
 <section class="container">
     <form action="/item/delevery_proc" method="post">
     <h3>주문</h3>
-    <table border="1">
+    <table  class="table">
         <tr>
             <th>이름</th>
             <td th:text="${memList.name}"></td>
@@ -21,7 +21,7 @@
         </tr>
     </table>
     <h3>배송지</h3>
-    <table border="1" class="deli_table">
+    <table  class="table" id="deli_table">
         <tr>
             <th>받는사람</th>
             <td>
@@ -43,7 +43,7 @@
             <td>
                 <div>
                 <input type="text" name="add1" id="sample6_postcode" placeholder="우편번호" >
-                <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
+                <input type="button" onclick="sample6_execDaumPostcode()" class="btn btn-outline-secondary btn-sm" value="우편번호 찾기">
                 </div>
                 <div>
                 <input type="text" name="add2" id="sample6_address" placeholder="주소" style="width: 350px;">
@@ -60,7 +60,8 @@
         </tr>
     </table>
     <h3>배송 상품</h3>
-    <table border="1">
+    <table  class="table">
+        <thead>
         <tr>
             <th style="width: 5%;"></th>
             <th style="width: 35%;">상품명</th>
@@ -68,6 +69,8 @@
             <th style="width: 10%;">수량</th>
             <th style="width: 20%;">총 금액</th>
         </tr>
+        </thead>
+        <tbody>
         <tr th:each="cartList, cartListStat : ${cartList}">
             <td>
                 <span th:text="${cartListStat.count}"></span>
@@ -96,23 +99,25 @@
             <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">0원
             </td>
         </tr>
+        </tbody>
     </table>
     <h3>결제 금액</h3>
-    <table border="1">
+    <table class="table">
+        <tbody>
         <tr>
             <th>결제 금액</th>
             <td id="cartTotalPrice2" style="text-align:right">0원</td>
         </tr>
         <tr>
-        <th>결제 수단</th>
+        <th >결제 수단</th>
         <td>
-            <div class="title">결제 방법</div>
             <div id="payment-method"></div>
             <div id="agreement"></div>
         </td>
-    </tr>
+        </tr>
+        </tbody>
     </table>
-    <div class="cash"><input type="submit" value="결제"></div>
+        <div class="cash"><button class="btn btn-outline-secondary btn-sm" type="submit">결제</button></div>
     </form>
 </section>
 </body>
