--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -10,23 +10,17 @@
 <body>
 <section class="form-signin">
     <form action="/login_proc" method="post">
-        <div id="login">
-            <div><b>아이디</b></div>
-            <div class="form-floating">
-                <input type="text" name="userid" class="form-control" style="height:10px; width:300px;" placeholder="아이디">
-            </div>
-            <div><b>비밀번호</b></div>
-            <div class="form-floating">
-                <input type="password" name="password" class="form-control" style="height:10px; width:300px;" placeholder="비밀번호">
-            </div>
+        <h1 class="h3 mb-3 fw-normal">로그인</h1>
+        <div class="form-floating">
+            <input type="text" name="userid" class="form-control" id="floatingInput" placeholder="아이디">
+            <label for="floatingInput">아이디</label>
         </div>
-        <button class="btn btn-outline-secondary" type="submit">Sign in</button>
+        <div class="form-floating">
+            <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="비밀번호">
+            <label for="floatingPassword">비밀번호</label>
+        </div>
+        <button class="btn btn-outline-secondary" type="submit">로그인</button>
     </form>
-    <div id="item">
-        <a href="mem_write">회원가입</a> ㅣ
-        <a href="">아이디 찾기</a> ㅣ
-        <a href="">비밀번호 찾기</a>
-    </div>
 </section>
 </body>
 </html>
