--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -10,3 +10,16 @@
     text-align: left;
     background-color: #CCD3CA;
 }
+#item{
+    margin: 30px 0 30px 0;
+}
+#item_list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    padding: 0 0 30px 0;
+    margin-left: 50px;
+}
+#itemBnt{
+    text-align: right;
+}
