--- a/src/main/resources/static/css/top.css
+++ b/src/main/resources/static/css/top.css
@@ -59,10 +59,10 @@ nav{
         vertical-align: middle;
 }
 .category2{
-    height:0;
+    height: auto;
     position: relative;
     overflow: hidden;
-    z-index: 10;
+    z-index: 1000;
 }
 .category1 > li:hover{
 
