--- a/src/main/resources/templates/inc/top.html
+++ b/src/main/resources/templates/inc/top.html
@@ -1,4 +1,5 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" th:fragment="top">
+<link rel="stylesheet" type="text/css" href="/css/top.css">
 
 <div class="container">
     <header class="blog-header py-3">
