--- a/src/main/resources/templates/item/cart.html
+++ b/src/main/resources/templates/item/cart.html
@@ -20,23 +20,23 @@
                 <th style="width: 10%;">삭제</th>
             </tr>
             <tr th:each="cart, cartStat : ${cart}">
-                <td>
+                <td style="vertical-align: middle;">
                     <input type="hidden" id="cart_idx" name="idx" th:value="${cart.idx}">
                     <input type="checkbox" th:id="'check'+${cart.idx}" name="check" th:value="${cart.idx}" checked="checked">
                 </td>
-                <td>
+                <td style="vertical-align: middle;">
                     <div th:each="fileName: ${cart.storedFileName}"><img th:src="@{|/thumbnail/${fileName}|}" alt="" style="width:50px;"></div>
                     <div th:text="${cart.item_name}"></div>
                 </td>
-                <td th:id="'price'+${cart.idx}" th:text="${#numbers.formatInteger(cart.item_price, '0', 'COMMA')}+'원'">금액</td>
-                <td>
+                <td style="vertical-align: middle;" th:id="'price'+${cart.idx}" th:text="${#numbers.formatInteger(cart.item_price, '0', 'COMMA')}+'원'">금액</td>
+                <td style="vertical-align: middle;">
                     <input type="button" class="btn btn-outline-secondary btn-sm" value="-" th:onclick="'count(\'minus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
                     <span th:id="'quantity' + ${cart.idx}" th:text="${cart.item_quantity}"></span>
                     <input type="button" class="btn btn-outline-secondary btn-sm" value="+" th:onclick="'count(\'plus\', \'quantity' + ${cart.idx} + '\', \'price' + ${cart.idx} + '\', \'totalPrice' + ${cart.idx} + '\')'">
 
                 </td>
-                <td th:id="'totalPrice'+${cart.idx}" class="price" th:text="${#numbers.formatInteger(cart.item_price * cart.item_quantity, 0, 'COMMA')}+'원'"></td>
-                <td><a th:href="@{/cart/delete/{cart_idx}(cart_idx = ${cart.idx})}">삭제</a></td>
+                <td style="vertical-align: middle;" th:id="'totalPrice'+${cart.idx}" class="price" th:text="${#numbers.formatInteger(cart.item_price * cart.item_quantity, 0, 'COMMA')}+'원'"></td>
+                <td style="vertical-align: middle;"><a th:href="@{/cart/delete/{cart_idx}(cart_idx = ${cart.idx})}">삭제</a></td>
             </tr>
             <tr>
                 <td colspan="4" style="text-align:right; border-right:hidden;">총 금액</td>
