--- a/src/main/resources/templates/item/delivery.html
+++ b/src/main/resources/templates/item/delivery.html
@@ -72,24 +72,24 @@
         </thead>
         <tbody>
         <tr th:each="cartList, cartListStat : ${cartList}">
-            <td>
+            <td style="vertical-align: middle;">
                 <span th:text="${cartListStat.count}"></span>
                 <input type="hidden" name="itemIdx" th:value="${cartList.item_idx}">
                 <input type="hidden" name="cartIdx" th:value="${cartList.idx}">
             </td>
-            <td>
+            <td style="vertical-align: middle;">
                 <div th:each="fileName: ${cartList.storedFileName}"><img th:src="@{|/thumbnail/${fileName}|}" alt="" style="width:50px; align: left;"></div>
                 <div th:text="${cartList.item_name}"></div>
             </td>
-            <td>
+            <td style="vertical-align: middle;">
                 <span th:text="${#numbers.formatInteger(cartList.item_price, '0', 'COMMA')}+'원'"></span>
                 <input type="hidden" name="itemPrice" th:value="${cartList.item_price}">
             </td>
-            <td>
+            <td style="vertical-align: middle;">
                 <span th:text="${cartList.item_quantity}"></span>
                 <input type="hidden" name="quantity" th:value="${cartList.item_quantity}">
             </td>
-            <td>
+            <td style="vertical-align: middle;">
                 <span class="price" th:text="${#numbers.formatInteger(cartList.item_price * cartList.item_quantity, 0, 'COMMA')}+'원'"></span>
                 <input type="hidden" name="totalPrice" th:value="${cartList.item_price * cartList.item_quantity}">
             </td>
