--- a/src/main/resources/templates/member/item_list.html
+++ b/src/main/resources/templates/member/item_list.html
@@ -13,7 +13,7 @@
         <div th:if="${#lists.isEmpty(list.getContent())}">입력된 상품이 없습니다.</div>
         <div th:each="list, listStat : ${list}">
             <a class="card" style="width: 16rem;" th:href="@{|/member/item_view/${list.idx}|}">
-                <div th:each = "fileName: ${list.storedFileName}"><img class="card-img-top" th:src="@{|/thumbnail/${fileName}|}" alt=""></div>
+                <div th:each = "fileName: ${list.storedFileName}"><img class="card-img-top" th:src="@{|/thumbnail/${fileName}|}" alt="" style="height: 200px;"></div>
                 <div class="card-body">
                 <div>[[${list.item_name}]]</div>
                 <div th:text="${#numbers.formatInteger(list.item_price, 0, 'COMMA')}+'원'"></div>
