--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -21,6 +21,10 @@
         </div>
         <button class="btn btn-outline-secondary" type="submit">로그인</button>
     </form>
+    <div style="margin: 20px 0 30px 0;">
+        <button class="btn btn-outline-light" type="button"><img src="/images/naver_logo.png" alt="" style="width: 30px;"></button>
+        <button class="btn btn-outline-light" type="button"><img src="/images/google_logo.png" alt="" style="width: 30px;"></button>
+    </div>
 </section>
 </body>
 </html>
