--- a/src/main/resources/templates/item/buy_item.html
+++ b/src/main/resources/templates/item/buy_item.html
@@ -8,6 +8,89 @@
 <body>
 <section class="container">
     <div><h3>주문 조회</h3></div>
+    <table class="table">
+        <tr>
+            <th>회원 번호</th>
+            <td>aaaa</td>
+        </tr>
+        <tr>
+            <th>아이디</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>비밀번호</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>이름</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>이메일</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>주소</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>전화번호</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>예치금</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>등록일</th>
+            <td></td>
+        </tr>
+    </table>
+    <h3>배송지</h3>
+    <table  class="table" id="deli_table">
+        <tr>
+            <th>받는사람</th>
+            <td>aaaaaaa</td>
+        </tr>
+        <tr>
+            <th>전화번호</th>
+            <td>aaaaaaaa</td>
+        </tr>
+        <tr>
+            <th>주소</th>
+            <td></td>
+        </tr>
+        <tr>
+            <th>배송 메세지</th>
+            <td></td>
+        </tr>
+    </table>
+    <h3>배송 상품</h3>
+    <table  class="table">
+        <thead>
+        <tr>
+            <th style="width: 5%;"></th>
+            <th style="width: 35%;">상품명</th>
+            <th style="width: 20%;">금액</th>
+            <th style="width: 10%;">수량</th>
+            <th style="width: 20%;">총 금액</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>aaaaaa</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="4" style="text-align:right; border-right:hidden;">총 금액</td>
+            <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">0원
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </section>
 </body>
 </html>
