--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,9 @@
                 </a>
             </div>
         </div>
-        <div id="itemBnt"><input type="button" class="btn btn-outline-secondary btn-sm" value="상품 더보기"></div>
+        <div id="itemBnt">
+            <a href="member/item_list/0"><input type="button" class="btn btn-outline-secondary btn-sm" value="상품 더보기"></a>
+        </div>
     </div>
 </section>
 </body>
