--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header th:replace="~{inc/top :: top}"></header>
+<nav th:replace="~{inc/nav :: nav}"></nav>
 
 <th:block layout:fragment="Content"></th:block>
 
