--- a/src/main/resources/templates/admin/mem_list.html
+++ b/src/main/resources/templates/admin/mem_list.html
@@ -31,26 +31,26 @@
         <div aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <li class="page-item">
-                    <a class="page-link" aria-label="Previous" th:href="@{/member/item_list/{idx}(idx=${category_idx}, page=1)}">
+                    <a class="page-link" aria-label="Previous" th:href="@{/admin/mem_list(page=1)}">
                         <span aria-hidden="true">◀</span>
                     </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" aria-label="Previous" th:href="${list.first} ? '#' : @{/member/item_list/{idx}(idx=${category_idx}, page=${list.number})}">
+                    <a class="page-link" aria-label="Previous" th:href="${list.first} ? '#' : @{/admin/mem_list(page=${list.number})}">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
                 <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
                     <li class="page-item" ><a class="page-link" href="#" th:if="${page == list.number + 1}"  th:text="${page}"></a></li>
-                    <li class="page-item" ><a class="page-link" th:if="${page != list.number + 1} and ${page != 0}" th:href="@{/member/item_list/{idx}(idx=${category_idx}, page=${page})}" th:text="${page}"></a></li>
+                    <li class="page-item" ><a class="page-link" th:if="${page != list.number + 1} and ${page != 0}" th:href="@{/admin/admin_list(page=${page})}" th:text="${page}"></a></li>
                 </th:block>
                 <li class="page-item">
-                    <a class="page-link" aria-label="Next" th:href="${list.last} ? '#' : @{/member/item_list/{idx}(idx=${category_idx}, page=${list.number + 2})}">
+                    <a class="page-link" aria-label="Next" th:href="${list.last} ? '#' : @{/admin/mem_list(page=${list.number + 2})}">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" aria-label="Next" th:href="@{/member/item_list/{idx}(idx=${category_idx}, page=${list.totalPages})}">
+                    <a class="page-link" aria-label="Next" th:href="@{/admin/mem_list(page=${list.totalPages})}">
                         <span aria-hidden="true">▶</span>
                     </a>
                 </li>
