--- a/src/main/resources/templates/item/buy_item.html
+++ b/src/main/resources/templates/item/buy_item.html
@@ -11,38 +11,38 @@
     <table class="table">
         <tr>
             <th>이름</th>
-            <td></td>
+            <td>노영진</td>
         </tr>
         <tr>
             <th>전화번호</th>
-            <td></td>
+            <td>010-0000-0000</td>
         </tr>
         <tr>
             <th>예치금</th>
-            <td></td>
+            <td>60,000</td>
         </tr>
     </table>
     <h3>배송지</h3>
     <table  class="table" id="deli_table">
         <tr>
             <th>받는사람</th>
-            <td>aaaaaaa</td>
+            <td>노영진</td>
         </tr>
         <tr>
             <th>전화번호</th>
-            <td>aaaaaaaa</td>
+            <td>010-0000-0000</td>
         </tr>
         <tr>
             <th>주소</th>
-            <td></td>
+            <td>대구광역시 동구 화랑로</td>
         </tr>
         <tr>
             <th>배송 메세지</th>
-            <td></td>
+            <td>빠른배송 부탁드립니다.</td>
         </tr>
     </table>
     <h3>배송 상품</h3>
-    <table  class="table">
+    <table class="table">
         <thead>
         <tr>
             <th style="width: 5%;"></th>
@@ -54,15 +54,15 @@
         </thead>
         <tbody>
         <tr>
-            <td>aaaaaa</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>1. </td>
+            <td>텐트</td>
+            <td>20,000원</td>
+            <td>2</td>
+            <td>40,000원</td>
         </tr>
         <tr>
             <td colspan="4" style="text-align:right; border-right:hidden;">총 금액</td>
-            <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">0원
+            <td colspan="2" id="cartTotalPrice" style="text-align:right; border-left:hidden;">40,000원
             </td>
         </tr>
         </tbody>
